feat(cs-api): add sampling features resource
